Mon Dec  7 05:07:38 UTC 2009  Paul Calabrese  <calabrese_p@ociweb.com>

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/transport/framework/TransportFactory.cpp:
        * dds/DCPS/transport/framework/TransportImpl.h:
        * dds/DCPS/transport/framework/TransportImpl.cpp:
        * dds/monitor/DRMonitorImpl.cpp:
        * dds/monitor/PublisherMonitorImpl.cpp:
        * dds/monitor/SubscriberMonitorImpl.cpp:
        * dds/monitor/TransportMonitorImpl.h:
        * dds/monitor/TransportMonitorImpl.cpp:
        * tests/DCPS/Monitor/DRMDataReaderListener.cpp:

          Fill in some missing fields for a number of monitor reports.
          These include transport IDs for the pub and sub reports
          and the remaining details of transport and data reader
          reports.

        * dds/monitor/monitor.idl:

          Change the instances field of the DataReaderReport to
          be a sequence of instance handles (and not repo IDs).

        * tools/odds_monitor/MonitorData.h:
        * tools/odds_monitor/Monitor_main.cpp:

          Make some mods to allow compilation with VC++.  There 
          remain some #include issues I need to resolve in a later
          commit.

Mon Dec  7 02:23:48 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * java/OpenDDS/DCPS/transport/MulticastConfiguration.java:
        * java/dds/OpenDDS_DCPS_jni.cpp:

          Updated documentation; renamed nak_repair_size to nak_depth.

Sun Dec  6 18:32:30 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/multicast/MulticastDataLink.cpp:

          Fixed GCC warnings due to unused parameters.

Sat Dec  5 20:02:21 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/framework/TransportSendBuffer.h:
        * dds/DCPS/transport/framework/TransportSendBuffer.cpp:
        * dds/DCPS/transport/framework/TransportSendStrategy.h: