@@ -1,3 +1,9 @@
+Mon Dec  7 15:51:15 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * java/dds/OpenDDS_jni_helpers.h:
+
+	  Fixed VC++ warnings converting from jlong to long.
+
 Mon Dec  7 05:07:38 UTC 2009  Paul Calabrese  <calabrese_p@ociweb.com>
 
         * dds/DCPS/DataReaderImpl.h:
@@ -25,7 +31,7 @@ Mon Dec  7 05:07:38 UTC 2009  Paul Calabrese  <calabrese_p@ociweb.com>
         * tools/odds_monitor/MonitorData.h:
         * tools/odds_monitor/Monitor_main.cpp:
 
-          Make some mods to allow compilation with VC++.  There 
+          Make some mods to allow compilation with VC++.  There
           remain some #include issues I need to resolve in a later
           commit.
 
